--- a/zjuthesis.tex
+++ b/zjuthesis.tex
@@ -10,7 +10,7 @@
     Grade           = 2023,            % only the year, no '级'
     Major           = 计算机科学与技术,
     Department      = 计算机科学与技术学院,
-    SubmitDate      = 2025年12月25日,
+    SubmitDate      = 2025年12月30日,
     MajorFormat     = general,
     Degree          = graduate,   % 'undergraduate' or 'graduate'
     Type            = thesis,          % 'thesis'   or 'design'
@@ -19,8 +19,8 @@
     Language        = chinese,         % 'chinese'  or 'english'
     % Graduate Thesis Info
     GradLevel       = master,          % 'master' or 'doctor'
-    Topic           = 研究方向,
-    ColaboratorName = 合作导师,
+    Topic           = 计算机辅助设计与图形系统,
+    ColaboratorName = 无,
     % Table of Contents
     ListOfContents  = true,
     ListOfFigures   = true,
